--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "node script/start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
   "private": true,
   "workspaces": [
-    "apps",
+    "apps/*",
     "umi"
   ]
 }
